// Copyright 2018 Google LLC
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';
package api;
option go_package = "internal/pb";

// The protobuf messages sent in the gRPC calls are defined 'messages.proto'.
import 'api/protobuf-spec/messages.proto';

// Request message sent to the MMF.
message RunRequest {
  string profile_id = 1;                 // Developer-chosen profile name, state storage key for the match object.
  string proposal_id = 2;                // The ID against which, the generated proposal should be stored.
  string result_id = 3;                  // Final result ID. MMF needs to know this in case of errors where proposal generation can be shortcircuited.
  messages.MatchObject match_object = 4; // The match object containing the details of the match to be generated.
  string timestamp = 5;
}

message RunResponse {
}

// The MMF proto defines the API for running MMFs as long-lived, 'serving'
// functions inside of the kubernetes cluster.
service MatchFunction {
  // The assumption is that there will be one service for each MMF that is
  // being served.  Build your MMF in the appropriate serving harness, deploy it
  // to the K8s cluster with a unique service name, then connect to that service
  // and call 'Run()' to execute the fuction.
  rpc Run(RunRequest) returns (RunResponse) {}
}
